# atom-table-rs

./: .gitignore  .mailmap  CHANGELOG.md  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
.reuse/: REUSE.toml  dep5
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
