# SPDX-FileCopyrightText: 2023, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "Assign easy-to-handle typed IDs to large, hard to handle things like strings"
edition = "2021"
license = "BSL-1.0"
name = "atom_table"
version = "0.1.0"

[features]
default = ["transform"]
transform = ["dep:thiserror"]

[dependencies]
thiserror = {version = "1.0", optional = true}
typed-index-collections = "3.1"
