# SPDX-FileCopyrightText: 2023, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
categories = ["data-structures"]
description = "Assign easy-to-handle typed IDs to large, hard to handle things like strings"
documentation = "https://docs.rs/atom_table"
edition = "2021"
keywords = ["collection", "index", "vec"]
license = "MIT OR Apache-2.0"
name = "atom_table"
readme = "README.md"
repository = "https://github.com/rpavlik/atom-table-rs"
version = "1.1.0"

[features]
default = ["transform"]
transform = ["dep:thiserror"]

[dependencies]
thiserror = {version = "1.0", optional = true}
typed-index-collections = "3.1"

[dev-dependencies]
derive_more = "1.0.0"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["xtask"]
